removed dedupKey
